Fix Java 1.8 compatibility
Replace Java 9+ APIs with Java 8 equivalents:
- String.isBlank() → isEmpty() with trim() check
- String.formatted() → String.format()
- Files.readString() → Files.readAllBytes() + String constructor
- Files.writeString() → Files.write()
- Stream.toList() → Stream.collect(Collectors.toList())
- List.of() → Arrays.asList()
- Objects.requireNonNullElse() → ternary operator

This allows the plugin to compile and run on Java 1.8+.