@@ -24,6 +24,7 @@ import org.apache.maven.plugins.annotations.Parameter;
 
 import java.io.IOException;
 import java.nio.file.Path;
+import java.util.Arrays;
 import java.util.List;
 
 @Mojo(name = "generate", threadSafe = true)
@@ -100,7 +101,7 @@ public class GenerateMojo extends AbstractAiIndexMojo {
                 int count = 0;
 
                 for (Path subtree : resolvedSubtrees.isEmpty()
-                        ? List.of(basePath.resolve("src/main/java"))
+                        ? Arrays.asList(basePath.resolve("src/main/java"))
                         : resolvedSubtrees) {
 
                     if (!subtree.toFile().exists()) {
@@ -123,7 +124,7 @@ public class GenerateMojo extends AbstractAiIndexMojo {
 
     private List<String> resolveFileExtensions() {
         if (fileExtensions == null || fileExtensions.isEmpty()) {
-            return List.of(DEFAULT_FILE_EXTENSION);
+            return Arrays.asList(DEFAULT_FILE_EXTENSION);
         }
         return fileExtensions;
     }
