@@ -21,9 +21,11 @@ package net.ladenthin.maven.llamacpp.aiindex;
 import org.apache.maven.plugin.logging.Log;
 
 import java.io.IOException;
+import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.util.List;
+import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 public class SourceFileIndexer {
@@ -83,7 +85,7 @@ public class SourceFileIndexer {
         int count = 0;
 
         try (Stream<Path> stream = Files.walk(sourceRoot)) {
-            for (Path path : stream.filter(Files::isRegularFile).toList()) {
+            for (Path path : stream.filter(Files::isRegularFile).collect(Collectors.toList())) {
                 if (!matchesExtension(path)) {
                     continue;
                 }
@@ -143,7 +145,7 @@ public class SourceFileIndexer {
             return;
         }
 
-        final String sourceText = Files.readString(sourceFile);
+        final String sourceText = new String(Files.readAllBytes(sourceFile), StandardCharsets.UTF_8);
 
         final AiGenerationResult result = fieldGenerationSupport.processFieldGenerations(
                 fieldGenerations, sourceFile, CONTEXT_TYPE_FILE, sourceText, baseHeader);
